--- a/src/client/styles/rb-alert.scss
+++ b/src/client/styles/rb-alert.scss
@@ -8,29 +8,67 @@
 /* The Component
  ****************/
 section {
-	// place common styles here
+	/* Common
+	 *********/
+	padding: remy(10) remy(15);
+	border-width: 1px;
+	border-style: solid;
+	border-radius: 4px;
+
+	::slotted(hr) {
+		margin: remy(16) 0 !important;
+		border: none !important;
+		border-top-style: solid !important;
+		border-top-width: 1px !important;
+	}
+
+	/* Mixins
+	 *********/
+	@mixin hr($bg) {
+		::slotted(hr) {
+			border-top-color: darken($bg, 10) !important;
+		}
+	}
 
 	/* Kinds
 	 ********/
 	&.default {
+		$bg: #cce5ff;
 		color: #004085;
-		background-color: #cce5ff;
+		border-color: #b8daff;
+		background-color: $bg;
+		@include hr($bg);
 	}
 
 	&.danger {
-
+		$bg: #f8d7da;
+		color: #721c24;
+		border-color: #f5c6cb;
+		background-color: $bg;
+		@include hr($bg);
 	}
 
 	&.info {
-
+		$bg : #d1ecf1;
+		color: #0c5460;
+		border-color: #bee5eb;
+		background-color: $bg;
+		@include hr($bg);
 	}
 
 	&.success {
+		$bg: #d4edda;
 		color: #155724;
-		background-color: #c3e6cb;
+		border-color: #c3e6cb;
+		background-color: $bg;
+		@include hr($bg);
 	}
 
 	&.warning {
-
+		$bg: #fff3cd;
+		color: #856404;
+		border-color: #ffeeba;
+		background-color: $bg;
+		@include hr($bg);
 	}
 }
