--- a/src/client/styles/rb-alert.scss
+++ b/src/client/styles/rb-alert.scss
@@ -10,6 +10,7 @@
 section {
 	/* Common
 	 *********/
+	position: relative;
 	padding: remy(10) remy(15);
 	border-width: 1px;
 	border-style: solid;
@@ -71,4 +72,39 @@ section {
 		background-color: $bg;
 		@include hr($bg);
 	}
+
+	/* Options
+	 **********/
+	&:not(.removable) {
+		button {
+			display: none;
+		}
+	}
+	&.removable {
+		padding-right: remy(35);
+
+		button {
+			position: absolute;
+			top: 15px;
+			right: 15px;
+			padding: 0;
+			border: none;
+			outline: none;
+			cursor: pointer;
+			background: none;
+			&:focus,
+			&:hover {
+				opacity: .5;
+			}
+			&:active {
+				opacity: .7;
+			}
+		}
+	}
+}
+
+/* Removable
+ ************/
+:host(.hide) {
+	display: none !important;
 }
