feat(removable): inherit color for the x

--- a/src/client/styles/rb-alert.scss
+++ b/src/client/styles/rb-alert.scss
@@ -92,6 +92,7 @@ section {
 			outline: none;
 			cursor: pointer;
 			background: none;
+			color: inherit;
 			&:focus,
 			&:hover {
 				opacity: .5;
