--- a/src/client/views/rb-alert.html
+++ b/src/client/views/rb-alert.html
@@ -1,7 +1,7 @@
 <section
 	class$="[[kind]] [[_removable(removable)]]">
 	<button type="button" on-click="_remove">
-		<rb-icon kind="times" source="solid" title="Close"></rb-icon>
+		<rb-icon kind="times" source="solid" title="Remove"></rb-icon>
 	</button>
 	<slot></slot>
 </section>
