chore(bump): dep rb-base to v0.0.2 and update view syntax for lit-html >= v0.11.1

--- a/src/client/views/rb-alert.html
+++ b/src/client/views/rb-alert.html
@@ -1,5 +1,5 @@
 <section
-	class$="
+	class="
 		${props.kind || 'default'}
 		${props.removable ? 'removable' : ''}
 		${state.hidden ? 'hidden' : ''}
@@ -8,7 +8,7 @@
 		kind="text"
 		icon="times"
 		icon-source="solid"
-		on-click="${this._remove.bind(this)}">
+		@click="${this._remove.bind(this)}">
 	</rb-button>
 	<slot></slot>
 </section>
