fix(rb-button): change icon to icon-kind

--- a/src/client/views/rb-alert.html
+++ b/src/client/views/rb-alert.html
@@ -6,7 +6,7 @@
 	">
 	<rb-button
 		kind="text"
-		icon="times"
+		icon-kind="times"
 		icon-source="solid"
 		@click="${this._remove.bind(this)}">
 	</rb-button>
