--- a/src/client/styles/rb-alert.scss
+++ b/src/client/styles/rb-alert.scss
@@ -4,6 +4,7 @@
 // Sassy Goodness
 @import 'sass/functions.scss';
 @import 'sass/variables.scss';
+@import 'theme.scss';
 
 /* The Component
  ****************/
@@ -35,41 +36,41 @@ section {
 	 ********/
 	&.default {
 		$bg: #cce5ff;
-		color: #004085;
-		border-color: #b8daff;
-		background-color: $bg;
+		color: var(--default-color);
+		border-color: var(--default-border-color);
+		background-color: var(--default-bg-color);
 		@include hr($bg);
 	}
 
 	&.danger {
 		$bg: #f8d7da;
-		color: #721c24;
-		border-color: #f5c6cb;
-		background-color: $bg;
+		color: var(--danger-color);
+		border-color: var(--danger-border-color);
+		background-color: var(--danger-bg-color);
 		@include hr($bg);
 	}
 
 	&.info {
 		$bg : #d1ecf1;
-		color: #0c5460;
-		border-color: #bee5eb;
-		background-color: $bg;
+		color: var(--info-color);
+		border-color: var(--info-border-color);
+		background-color: var(--info-bg-color);
 		@include hr($bg);
 	}
 
 	&.success {
 		$bg: #d4edda;
-		color: #155724;
-		border-color: #c3e6cb;
-		background-color: $bg;
+		color: var(--success-color);
+		border-color: var(--success-border-color);
+		background-color: var(--success-bg-color);
 		@include hr($bg);
 	}
 
 	&.warning {
 		$bg: #fff3cd;
-		color: #856404;
-		border-color: #ffeeba;
-		background-color: $bg;
+		color: var(--warning-color);
+		border-color: var(--warning-border-color);
+		background-color: var(--warning-bg-color);
 		@include hr($bg);
 	}
 
