feat(css variables): add border radius, width and style

--- a/src/client/styles/rb-alert.scss
+++ b/src/client/styles/rb-alert.scss
@@ -13,9 +13,9 @@ section {
 	 *********/
 	position: relative;
 	padding: remy(10) remy(15);
-	border-width: 1px;
-	border-style: solid;
-	border-radius: 4px;
+	border-width: var(--border-width);
+	border-style: var(--border-style);
+	border-radius: var(--border-radius);
 
 	::slotted(hr) {
 		margin: remy(16) 0 !important;
