chore(organize): rename and move theme.scss to main/variables.scss

--- a/src/client/styles/rb-alert.scss
+++ b/src/client/styles/rb-alert.scss
@@ -1,10 +1,8 @@
 /******************
  * RB-ALERT STYLES
  ******************/
-// Sassy Goodness
 @import 'sass/functions.scss';
-@import 'sass/variables.scss';
-@import 'theme.scss';
+@import 'main/variables.scss';
 
 /* The Component
  ****************/
@@ -14,7 +12,7 @@ section {
 	position: relative;
 	padding: remy(10) remy(15);
 	border-width: var(--border-width);
-	border-style: var(--border_style);
+	border-style: var(--border-type);
 	border-radius: var(--border-radius);
 
 	::slotted(hr) {
