--- a/src/client/styles/main/variables.scss
+++ b/src/client/styles/main/variables.scss
@@ -11,6 +11,7 @@
 	--default-bg-color: var(--rb-alert-default-bg-color, #cce5ff); // blue
 	--danger-bg-color:  var(--rb-alert-danger-bg-color,  #f8d7da); // red
 	--info-bg-color:    var(--rb-alert-info-bg-color,    #d1ecf1); // turquoise
+	--secondary-bg-color: var(--rb-alert-secondary-bg-color, #e2e3e5); // grey
 	--success-bg-color: var(--rb-alert-success-bg-color, #d4edda); // green
 	--warning-bg-color: var(--rb-alert-warning-bg-color, #fff3cd); // yellow
 
@@ -18,6 +19,7 @@
 	--default-border-color: var(--rb-alert-default-border-color, #b8daff);
 	--danger-border-color:  var(--rb-alert-danger-border-color,  #f5c6cb);
 	--info-border-color:    var(--rb-alert-info-border-color,    #bee5eb);
+	--secondary-border-color: var(--rb-alert-secondary-border-color, #d6d8db);
 	--success-border-color: var(--rb-alert-success-border-color, #c3e6cb);
 	--warning-border-color: var(--rb-alert-warning-border-color, #ffeeba);
 
@@ -25,6 +27,7 @@
 	--default-color: var(--rb-alert-default-color, #004085);
 	--danger-color:  var(--rb-alert-danger-color,  #721c24);
 	--info-color:    var(--rb-alert-info-color,    #0c5460);
+	--secondary-color: var(--rb-alert-secondary-color, #383d41);
 	--success-color: var(--rb-alert-success-color, #155724);
 	--warning-color: var(--rb-alert-warning-color, #856404);
 }
