--- a/src/client/views/rb-alert.html
+++ b/src/client/views/rb-alert.html
@@ -2,18 +2,12 @@
 	class="
 		${props.kind}
 		${props.removable ? 'removable' : ''}
-		${state.hidden ? 'hidden' : ''}
 	">
-	${props.removable
-		? html`
-			<rb-button
-				icon-kind="times"
-				icon-source="solid"
-				text='{ "inherit": "color" }'
-				@click="${this._remove.bind(this)}">
-			</rb-button>
-		` : null
-	}
+	<rb-button
+		icon-kind="times"
+		icon-source="solid"
+		text='{ "inherit": "color" }'>
+	</rb-button>
 	<slot></slot>
 </section>
 
