feat(new api option): inline

--- a/src/client/styles/layout/common.scss
+++ b/src/client/styles/layout/common.scss
@@ -3,7 +3,7 @@
  *********/
 section {
 	position: relative;
-	padding: 10px 15px;
+	padding: 11px 15px 12px;
 
 	/* Slot
 	 *******/
@@ -19,7 +19,7 @@ section {
 	rb-button {
 		position: absolute;
 		top: -3px;
-		right: 1px;
+		right: 2px;
 		--rb-button-text-button-opacity: .75;
 	}
 
@@ -27,5 +27,9 @@ section {
 		rb-button {
 			display: none;
 		}
+	}
+
+	&.removable {
+		padding-right: 21px;
 	}
 }
