fix(popover): from getting cut off

--- a/src/client/styles/layout/host.scss
+++ b/src/client/styles/layout/host.scss
@@ -2,7 +2,9 @@
  * HOST
  *******/
 :host {
-	contain: content;
+	// paint cuts off popover
+	// not sure about layout so not including it
+	contain: style;
 	display: block;
 	margin-bottom: 1rem;
 }
